# yt-dli

./: .deny.toml  Cargo.toml  README.md  flake.nix  justfile
media/vhs/: init.sh  init.tape  usage_arguments.tape  usage_interactive.tape  usage_mixed.tape
media/vhs/config/yt-dli/: 720p  music  show  video
media/vhs/config/yt-dlp/: config
nix/: home.nix  package.nix  shell.nix
src/: cli.rs  error.rs  exec.rs  interaction.rs  main.rs  profile.rs  util.rs
